{
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "bcb92493-73db-44d8-9bb9-667d923221cb",
            "actions": [
                {
                    "name": "FaceButtonDown",
                    "type": "Button",
                    "id": "e86321bd-81f1-4bb5-9d4d-30b23671e4fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButtonUp",
                    "type": "Button",
                    "id": "3c7fc056-ebd1-418b-b62f-54af487a4fe3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButtonLeft",
                    "type": "Button",
                    "id": "1ddfb32c-793c-4f67-9088-b60c2e48aedd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButtonRight",
                    "type": "Button",
                    "id": "34988435-068f-41f8-a354-b7c5b5d91c70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "24867449-c59d-4fcb-b56b-a82364aed488",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "570fcf4a-7b25-4b69-a0cb-6e79b295569c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButtonUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4ec7894-24e4-455f-a6ed-8830f80d5587",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c990de82-6d43-4adb-ac45-0e3559d89187",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}